--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -85,7 +85,7 @@
                              style="object-fit: cover;"
                             />
                            </picture>
-                           <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/im/pictures/bb3ded9f-7cf9-4b27-859e-bba73bb4070a.jpg?im_w=720'); background-size: cover;"></div>
+                           <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/im/pictures/bb3ded9f-7cf9-4b27-859e-bba73bb4070a.jpg?im_w=720'); background-size: cover;"></div>
                           </div>
                          </div>
                         </div>
