--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -179,7 +179,7 @@
                                                 "
                                               />
                                               <div
-                                                class="_10xjrv2u"
+                                                class="lite-image-fallback"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/pictures/ba6b59e1-9c2d-44d6-83e6-a1bd23582bd3.jpg');
                                                   background-size: cover;
@@ -1230,7 +1230,7 @@ Harlem, New York City"
                                                 "
                                               />
                                               <div
-                                                class="_10xjrv2u"
+                                                class="lite-image-fallback"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/pictures/978f207a-1a01-4ea4-8757-57b7e507adb6.jpg');
                                                   background-size: cover;
