--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -312,7 +312,7 @@
                                                       style="object-fit: cover"
                                                     />
                                                     <div
-                                                      class="_10xjrv2u"
+                                                      class="lite-image-fallback"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?aki_policy=large');
                                                         background-size: cover;
@@ -391,7 +391,7 @@
                                                       style="object-fit: cover"
                                                     />
                                                     <div
-                                                      class="_10xjrv2u"
+                                                      class="lite-image-fallback"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?aki_policy=large');
                                                         background-size: cover;
@@ -470,7 +470,7 @@
                                                       style="object-fit: cover"
                                                     />
                                                     <div
-                                                      class="_10xjrv2u"
+                                                      class="lite-image-fallback"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?aki_policy=large');
                                                         background-size: cover;
@@ -799,7 +799,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image-fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?aki_policy=large');
                                                           background-size: cover;
@@ -880,7 +880,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image-fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?aki_policy=large');
                                                           background-size: cover;
@@ -961,7 +961,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image-fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?aki_policy=large');
                                                           background-size: cover;
