--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -28921,7 +28921,7 @@
                                                     style="object-fit: cover"
                                                   />
                                                   <div
-                                                    class="_10xjrv2u"
+                                                    class="lite-image-fallback"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg');
                                                       background-size: cover;
