lite-image-absolute

--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -75,7 +75,7 @@
                              media="(min-width: 1439.1px)"
                             />
                             <img
-                             class="_1cb9q3xq"
+                             class="lite-image-absolute"
                              aria-hidden="true"
                              decoding="async"
                              elementtiming="LCP-target"
