--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -89,7 +89,7 @@
                           </div>
                          </div>
                         </div>
-                        <div class="_1d0k9d2t" style="justify-content: center;">
+                        <div class="hero__overlay" style="justify-content: center;">
                          <div>
                           <div class="_zhlx6jf">
                            <div class="_2h22gn">
