--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="hero__overlay" style="justify-content: center;">
                          <div>
-                          <div class="_zhlx6jf">
+                          <div class="hero__overlay-container">
                            <div class="_2h22gn">
                             <div class="_6ioq746">
                              <div style="margin-top: 4px; margin-bottom: 8px;">
