rename -mx-2, rename text-hero

--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -92,8 +92,8 @@
                         <div class="hero__overlay" style="justify-content: center;">
                          <div>
                           <div class="hero__overlay-container">
-                           <div class="_2h22gn">
-                            <div class="_6ioq746">
+                           <div class="-mx-2">
+                            <div class="text-hero">
                              <div style="margin-top: 4px; margin-bottom: 8px;">
                               <section>
                                <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
