--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -340,7 +340,7 @@
                           ></div>
                           <div style="margin-top: 40px">
                             <div>
-                              <div class="_2h22gn">
+                              <div class="-mx-2">
                                 <div class="_bd0wsyx">
                                   <section>
                                     <div class="_hgs47m">
@@ -573,7 +573,7 @@
                           </div>
                           <div style="margin-top: 40px">
                             <div>
-                              <div class="_2h22gn">
+                              <div class="-mx-2">
                                 <div class="_3zx37fj">
                                   <section>
                                     <div class="_hgs47m">
@@ -641,7 +641,7 @@
                                           </div>
                                         </h2>
                                       </div>
-                                      <div class="_2h22gn">
+                                      <div class="-mx-2">
                                         <div class="_1fylxegl">
                                           <div>
                                             <div
