--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1882,7 +1882,7 @@ Harlem, New York City"
                               <div
                                 data-veloute="marketing_section_landing_page_faq"
                               >
-                                <div class="_2h22gn">
+                                <div class="-mx-2">
                                   <div class="_19dmoalb">
                                     <div class="_7euvbh">
                                       <div
