--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -96,7 +96,7 @@
                             <div class="text-hero">
                              <div style="margin-top: 4px; margin-bottom: 8px;">
                               <section>
-                               <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                               <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
                                 <div class="_czm8crp">
                                  <div class="_122hpti" style="color: #ffffff;"><p class="_yz1jt7x">Management service for hosts in Antibes</p></div>
                                 </div>
@@ -105,7 +105,7 @@
                              </div>
                              <div style="margin-bottom: 20px;">
                               <section>
-                               <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                               <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
                                 <div class="_18hrqvin">
                                  <div class="_1ef5mfj" style="color: #ffffff;" id="subtitle-263260"><p class="_yz1jt7x">Let our partners in Antibes give you a hand with hosting on Airbnb. You can sit back and relax.</p></div>
                                 </div>
