--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -813,7 +813,7 @@
          <div class="_1dasptx">
           <div class="flex">
            <div class="flex-grow-1">
-            <h1 tabindex="-1" class="_14i3z6h"><div class="_1lmb2fq">Recommended help</div></h1>
+            <h1 tabindex="-1" class="heading"><div class="_1lmb2fq">Recommended help</div></h1>
            </div>
            <div class="_3mnosr">
             <button type="button" class="_98kere2" aria-busy="false" style="padding: 0px; margin: 0px;" id="close-help-modal">
@@ -835,7 +835,7 @@
               <div style="margin-bottom: 8px;">
                <label class="_rin72m" for="help-field-guide-search-input">
                 <div class="_121z06r2">
-                 <h2 tabindex="-1" class="_14i3z6h"><div class="_7cmsd4">Search by keyword</div></h2>
+                 <h2 tabindex="-1" class="heading"><div class="_7cmsd4">Search by keyword</div></h2>
                 </div>
                </label>
               </div>
@@ -866,7 +866,7 @@
           <div style="margin-bottom: 24px;">
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
-             <h2 tabindex="-1" class="_14i3z6h">
+             <h2 tabindex="-1" class="heading">
               <span class="_1xxanas2"><div class="uppercase">Recommended articles</div></span>
              </h2>
             </div>
@@ -969,7 +969,7 @@
           <div style="margin-bottom: 48px;">
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
-             <h2 tabindex="-1" class="_14i3z6h">
+             <h2 tabindex="-1" class="heading">
               <span class="_1xxanas2"><div class="uppercase">Explore more articles by topic</div></span>
              </h2>
             </div>
@@ -1022,7 +1022,7 @@
           <div style="margin-bottom: 24px;">
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
-             <h2 tabindex="-1" class="_14i3z6h">
+             <h2 tabindex="-1" class="heading">
               <span class="_1xxanas2"><div class="uppercase">Other things you can do</div></span>
              </h2>
             </div>
