--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -1027,7 +1027,7 @@
              </h2>
             </div>
             <div style="margin-top: 8px; margin-bottom: 8px;">
-             <div class="_czm8crp">
+             <div class="hero__title">
               <a href="/forgot_password" target="_blank" class="_12jvhwr" aria-busy="false">
                <div class="flex">
                 <div class="_rqfxvmb"><div>Reset password</div></div>
@@ -1043,7 +1043,7 @@
              </div>
             </div>
             <div style="margin-top: 8px; margin-bottom: 8px;">
-             <div class="_czm8crp">
+             <div class="hero__title">
               <a href="/users/payment_methods" target="_blank" class="_12jvhwr" aria-busy="false">
                <div class="flex">
                 <div class="_rqfxvmb"><div>Edit your payment methods</div></div>
@@ -1059,7 +1059,7 @@
              </div>
             </div>
             <div style="margin-top: 8px; margin-bottom: 8px;">
-             <div class="_czm8crp">
+             <div class="hero__title">
               <a href="/verify" target="_blank" class="_12jvhwr" aria-busy="false">
                <div class="flex">
                 <div class="_rqfxvmb"><div>Add your ID</div></div>
