--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -97,7 +97,7 @@
                              <div style="margin-top: 4px; margin-bottom: 8px;">
                               <section>
                                <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
-                                <div class="_czm8crp">
+                                <div class="hero__title">
                                  <div class="_122hpti" style="color: #ffffff;"><p class="_yz1jt7x">Management service for hosts in Antibes</p></div>
                                 </div>
                                </h2>
