--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -378,7 +378,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_czm8crp">
+                                      <div class="hero__title">
                                         Select an open issue to add more details
                                         or ask for an update.
                                       </div>
@@ -668,7 +668,7 @@
                                               <a
                                                 href="/help/article/221"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Creating an account
                                                 </div></a
                                               >
@@ -677,7 +677,7 @@
                                               <a
                                                 href="/help/article/2269"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Airbnb Referral Program Terms
                                                   and Conditions
                                                 </div></a
@@ -687,7 +687,7 @@
                                               <a
                                                 href="/help/article/252"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Searching for stays
                                                 </div></a
                                               >
@@ -696,7 +696,7 @@
                                               <a
                                                 href="/help/article/147"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Contacting Hosts
                                                 </div></a
                                               >
@@ -729,7 +729,7 @@
                                               <a
                                                 href="/help/article/76"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Change or reset your password
                                                 </div></a
                                               >
@@ -738,7 +738,7 @@
                                               <a
                                                 href="/help/article/823"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Editing, removing, or adding a
                                                   payment method
                                                 </div></a
@@ -748,7 +748,7 @@
                                               <a
                                                 href="/help/article/54"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Adding a payout method
                                                 </div></a
                                               >
@@ -757,7 +757,7 @@
                                               <a
                                                 href="/help/article/240"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Deactivating or deleting your
                                                   account
                                                 </div></a
@@ -791,7 +791,7 @@
                                               <a
                                                 href="/help/article/1237"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Verifying your identity
                                                 </div></a
                                               >
@@ -800,7 +800,7 @@
                                               <a
                                                 href="/help/article/88"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   If you can’t get in touch with
                                                   your Host
                                                 </div></a
@@ -810,7 +810,7 @@
                                               <a
                                                 href="/help/article/199"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Paying outside Airbnb
                                                 </div></a
                                               >
@@ -819,7 +819,7 @@
                                               <a
                                                 href="/help/article/209"
                                                 class="text-link"
-                                                ><div class="_czm8crp">
+                                                ><div class="hero__title">
                                                   Paying and communicating
                                                   through Airbnb
                                                 </div></a
