--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1951,7 +1951,7 @@ Harlem, New York City"
                                               Who can be a Social Impact host?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Social impact hosts can be
@@ -2036,7 +2036,7 @@ Harlem, New York City"
                                               Experience?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 The organization itself must be
@@ -2140,7 +2140,7 @@ Harlem, New York City"
                                               Does Airbnb charge a fee?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Not for Social Impact experience
@@ -2221,7 +2221,7 @@ Harlem, New York City"
                                               How often should I be hosting?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Experiences are meant to be
@@ -2327,7 +2327,7 @@ Harlem, New York City"
                                               for my experience?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Yes. To be eligible, every
@@ -2412,7 +2412,7 @@ Harlem, New York City"
                                               to host an Airbnb experience?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Not at all. Airbnb experiences
@@ -2504,7 +2504,7 @@ Harlem, New York City"
                                               How does the nonprofit get paid?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Since Social Impact hosts
@@ -2599,7 +2599,7 @@ Harlem, New York City"
                                               impact program?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero__title">
                                             <div class="navigation-section__header-desc-p">
                                               <p>
                                                 Airbnb mission is to create a
