--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -3960,7 +3960,7 @@
                                               <div class="_12d0llg5">
                                                 <div class="_qo24lwc">
                                                   <div>
-                                                    <div class="_czm8crp">Hosted by Adrian</div>
+                                                    <div class="hero__title">Hosted by Adrian</div>
                                                     <div style="margin-top: 4px;">
                                                       <div class="_1jlnvra2">237 reviews</div>
                                                     </div>
@@ -4000,10 +4000,10 @@
                                         </div>
                                         <div class="_12d0llg5">
                                           <div class="_qo24lwc">
-                                            <div class="_czm8crp">Check-in</div>
+                                            <div class="hero__title">Check-in</div>
                                           </div>
                                           <div class="_1iti0ju">
-                                            <div class="_czm8crp">Dec 21, 2021</div>
+                                            <div class="hero__title">Dec 21, 2021</div>
                                           </div>
                                         </div>
                                       </div>
@@ -4013,10 +4013,10 @@
                                         </div>
                                         <div class="_12d0llg5">
                                           <div class="_qo24lwc">
-                                            <div class="_czm8crp">Checkout</div>
+                                            <div class="hero__title">Checkout</div>
                                           </div>
                                           <div class="_1iti0ju">
-                                            <div class="_czm8crp">Dec 23, 2021</div>
+                                            <div class="hero__title">Dec 23, 2021</div>
                                           </div>
                                         </div>
                                       </div>
@@ -4026,10 +4026,10 @@
                                         </div>
                                         <div class="_12d0llg5">
                                           <div class="_qo24lwc">
-                                            <div class="_czm8crp">Guests</div>
+                                            <div class="hero__title">Guests</div>
                                           </div>
                                           <div class="_1iti0ju">
-                                            <div class="_czm8crp">1 adult</div>
+                                            <div class="hero__title">1 adult</div>
                                           </div>
                                         </div>
                                       </div>
@@ -4045,9 +4045,9 @@
                                           <div>
                                             <div class="_hgs47m">
                                               <div class="_10ejfg4u">
-                                                <div class="_czm8crp"><span>₱3,000.00 x 2 nights</span></div>
+                                                <div class="hero__title"><span>₱3,000.00 x 2 nights</span></div>
                                               </div>
-                                              <div class="cell-middle"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="hero__title"><span
                                                     class="_j1kt73">₱6,000.00</span></span>
                                               </div>
                                             </div>
@@ -4057,9 +4057,9 @@
                                           <div>
                                             <div class="_hgs47m">
                                               <div class="_10ejfg4u">
-                                                <div class="_czm8crp"><span>Cleaning fee</span></div>
+                                                <div class="hero__title"><span>Cleaning fee</span></div>
                                               </div>
-                                              <div class="cell-middle"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="hero__title"><span
                                                     class="_j1kt73">₱300.00</span></span></div>
                                             </div>
                                           </div>
@@ -4068,9 +4068,9 @@
                                           <div>
                                             <div class="_hgs47m">
                                               <div class="_10ejfg4u">
-                                                <div class="_czm8crp"><span>Service fee</span></div>
+                                                <div class="hero__title"><span>Service fee</span></div>
                                               </div>
-                                              <div class="cell-middle"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="hero__title"><span
                                                     class="_j1kt73">₱889.42</span></span></div>
                                             </div>
                                           </div>
@@ -4102,7 +4102,7 @@
                                               <div style="margin-bottom: 4px;">
                                                 <div class="_1p3joamp">Always communicate through Airbnb</div>
                                               </div>
-                                              <div class="_czm8crp">To protect your payment, never transfer money or
+                                              <div class="hero__title">To protect your payment, never transfer money or
                                                 communicate outside of the
                                                 Airbnb website or app. <a href="/help/article/199" target="_blank"
                                                   class="_12jvhwr" aria-busy="false">Learn more</a></div>
