hero__title-wrapper, my-0

--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -98,7 +98,7 @@
                               <section>
                                <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
                                 <div class="hero__title">
-                                 <div class="_122hpti" style="color: #ffffff;"><p class="_yz1jt7x">Management service for hosts in Antibes</p></div>
+                                 <div class="hero__title-wrapper" style="color: #ffffff;"><p class="my-0">Management service for hosts in Antibes</p></div>
                                 </div>
                                </h2>
                               </section>
@@ -107,7 +107,7 @@
                               <section>
                                <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
                                 <div class="_18hrqvin">
-                                 <div class="_1ef5mfj" style="color: #ffffff;" id="subtitle-263260"><p class="_yz1jt7x">Let our partners in Antibes give you a hand with hosting on Airbnb. You can sit back and relax.</p></div>
+                                 <div class="_1ef5mfj" style="color: #ffffff;" id="subtitle-263260"><p class="my-0">Let our partners in Antibes give you a hand with hosting on Airbnb. You can sit back and relax.</p></div>
                                 </div>
                                </h2>
                               </section>
