--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -969,7 +969,7 @@
                                                       class="heading"
                                                       elementtiming="LCP-target"
                                                     >
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         Reservation details
                                                       </p>
                                                     </h2>
@@ -1025,7 +1025,7 @@
                                                         </div>
                                                         <div class="_1ojpw5l">
                                                           <div class="_leedrk">
-                                                            <p class="_yz1jt7x">
+                                                            <p class="my-0">
                                                               Jose Angelo
                                                             </p>
                                                           </div>
@@ -1049,7 +1049,7 @@
                                                       </h3>
                                                     </div>
                                                     <div class="_leedrk">
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         TARYZPXS
                                                       </p>
                                                     </div>
@@ -1225,7 +1225,7 @@
                                                       class="heading"
                                                       elementtiming="LCP-target"
                                                     >
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         How to participate
                                                       </p>
                                                     </h2>
@@ -1341,7 +1341,7 @@
                                                       class="heading"
                                                       elementtiming="LCP-target"
                                                     >
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         About the experience
                                                       </p>
                                                     </h2>
@@ -1501,7 +1501,7 @@
                                                       <ul class="_153agul">
                                                         <li class="_1dewzp7">
                                                           <div class="_leedrk">
-                                                            <p class="_yz1jt7x">
+                                                            <p class="my-0">
                                                               preferably ...
                                                               headphones
                                                             </p>
@@ -1706,7 +1706,7 @@
                                                       class="heading"
                                                       elementtiming="LCP-target"
                                                     >
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         Payment info
                                                       </p>
                                                     </h2>
@@ -1727,7 +1727,7 @@
                                                       </h3>
                                                     </div>
                                                     <div class="_leedrk">
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         ₱339.26 PHP
                                                       </p>
                                                     </div>
@@ -1803,7 +1803,7 @@
                                                       class="heading"
                                                       elementtiming="LCP-target"
                                                     >
-                                                      <p class="_yz1jt7x">
+                                                      <p class="my-0">
                                                         Support
                                                       </p>
                                                     </h2>
