--- a/account/invite-friends.html
+++ b/account/invite-friends.html
@@ -884,7 +884,7 @@
                             elementtiming="LCP-target"
                             class="heading"
                           >
-                            <div class="_18hrqvin">₱0</div>
+                            <div class="text-desc">₱0</div>
                           </h2>
                           <div class="hero-banner__description">Available credits</div>
                         </section>
