--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -106,7 +106,7 @@
                              <div style="margin-bottom: 20px;">
                               <section>
                                <h2 tabindex="-1" elementtiming="LCP-target" class="heading">
-                                <div class="_18hrqvin">
+                                <div class="text-desc">
                                  <div class="_1ef5mfj" style="color: #ffffff;" id="subtitle-263260"><p class="my-0">Let our partners in Antibes give you a hand with hosting on Airbnb. You can sit back and relax.</p></div>
                                 </div>
                                </h2>
