btn-light in html

--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -115,7 +115,7 @@
                              <div>
                               <div style="margin-bottom: 48px;">
                                <div>
-                                <a href="/get-help-hosting" class="_rdgowjx" aria-describedby="subtitle-263260" aria-busy="false">
+                                <a href="/get-help-hosting" class="btn-light" aria-describedby="subtitle-263260" aria-busy="false">
                                  <span class="_ftj2sg4">
                                   <div class="_1p3joamp"><div>Estimate your earnings</div></div>
                                  </span>
